--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/Estilo.css">
+    <link rel="stylesheet" href="./css/layout_smartphone.css">
+    
     <title>lading page</title>
     <script src="https://kit.fontawesome.com/adc9fcd6ad.js" crossorigin="anonymous"></script>
 </head>
@@ -12,7 +15,7 @@
         <div class="container-grid conteudo-header">
             <img class="logo" src="./img/logos_senai_branco.png" alt="Logo Senai">
             <nav id="menu-header" class="menu-header">
-                <a href="#" title="inicio da pagina">inicio do texto</a>
+                <a href="#" title="inicio da pagina">inicio</a>
                 <a href="#">sobre</a>
                 <a href="#">endereço</a>
                 <a class="botao" href="mailto:example@email.com">contate-nos</a>
